boxctl/tests/fixtures/security/openssl_cert_not_cert.txt
unable to load certificate
140735123456789:error:0906D06C:PEM routines:PEM_read_bio:no start line:pem_lib.c:707:Expecting: CERTIFICATE
